--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
