--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.6.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
